tests/baselines/reference/parserParameterList10.errors.txt
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList10.ts(2,8): error TS2370: A rest parameter must be of an array type.
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList10.ts(2,11): error TS1048: A rest parameter cannot have an initializer.


==== tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList10.ts (2 errors) ====
    class C {
       foo(...bar = 0) { }
           ~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
              ~~~
!!! error TS1048: A rest parameter cannot have an initializer.
    }